--- a/about.html
+++ b/about.html
@@ -18,17 +18,18 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>黄道宏(BY)</strong>，一名南工大三学生，目前在南京。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢放屁（捂嘴）。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。如果有什么问题，欢迎提出探讨~</p>
+    <p>欢迎加入我的qq：<font color="red">2224397297</font></p>
     <p></p>
     
     <h5>Talks</h5>
 
     <ul>
+        <li><a href="https://user.qzone.qq.com/2224397297?ADUIN=2224397297&ADSESSION=1570700972&ADTAG=CLIENT.QQ.5659_MyTip.0&ADPUBNO=26941&source=namecardhoverstar">qq空间</a></li>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="http://huangxuan.me/">Hux</a></li> 
